--- a/aktualizowanie.html
+++ b/aktualizowanie.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Jeśli tworzymy plik na githubie albo pracujemy w teamie, możemy być zmuszeni "zaciągnać" jakieś zmiany przed wrzuceniem ich na githuba. Przydatna będzie komenda git pull, doda ona nma plik albo zaktualizuje je jeśli nie mamy takich jak nasz współpracownik. -->
 </body>
 </html>
