added p on the new_branch

--- a/aktualizowanie.html
+++ b/aktualizowanie.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <!-- Jeśli tworzymy plik na githubie albo pracujemy w teamie, możemy być zmuszeni "zaciągnać" jakieś zmiany przed wrzuceniem ich na githuba. Przydatna będzie komenda git pull, doda ona nma plik albo zaktualizuje je jeśli nie mamy takich jak nasz współpracownik. -->
+
+    <p>elo ziom zostałem stworzony na nowym branchu</p>
 </body>
 </html>
